# Weather-Control

./: CMakeLists.txt  ClimateControl.qml  Main.qml  ZoneControl.qml  main.cpp
